Add logging configuration to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       - MQTT_HOST
       - MQTT_PORT
       - LOG_LEVEL
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
